--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,9 +1,10 @@
-# ????????? ??????????? ? ???? ??????
+
 spring.datasource.url=jdbc:mysql://localhost:3306/userdaotest
 spring.datasource.username=root
 spring.datasource.password=abcdef
+spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 
-# ????????? Hibernate ? Spring JPA
+
 spring.jpa.show-sql=true
 spring.jpa.hibernate.ddl-auto=update
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQL5InnoDBDialect
