--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,10 +1,9 @@
-
-spring.datasource.url=jdbc:mysql://localhost:3306/userdaotest
-spring.datasource.username=root
-spring.datasource.password=abcdef
+spring.datasource.url=jdbc:mysql://localhost:3306/my_db
+spring.datasource.username=bestuser
+spring.datasource.password=bestuser
+spring.jpa.show-sql=true
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 spring.jpa.hibernate.ddl-auto=update
-
 
 base.directory.path=profile_photos/
 
