--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,9 +1,10 @@
-spring.datasource.url=jdbc:mysql://localhost:3306/my_db
+spring.datasource.url=jdbc:mysql://localhost:3306/my_db?serverTimezone=UTC
 spring.datasource.username=bestuser
 spring.datasource.password=bestuser
 spring.jpa.show-sql=true
-spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 spring.jpa.hibernate.ddl-auto=update
+spring.jpa.database-platform=org.hibernate.dialect.MySQL8Dialect
+spring.h2.console.enabled=true
 
 base.directory.path=profile_photos/
 
